[project]
name = "mc_qwen"
description = "comfyui node TextEconder for qwen image edit with internal lanczos rescale instead of area rescale."
version = "1.0.0"
license = {file = "LICENSE"} 
version = "0.0.1"
license = "MIT LICENSE" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/tester4488/mc_qwen"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/tester4488/mc_qwen/wiki"
"Bug Tracker" = "https://github.com/tester4488/mc_qwen/issues"

[tool.comfy]
PublisherId = ""
PublisherId = "@tester4488"
DisplayName = "mc_qwen"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

