[project]
name = "mc_qwen"
description = "comfyui node TextEconder for qwen image edit with internal lanczos rescale instead of area rescale."
version = "1.0.0"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/tester4488/mc_qwen"
#  Used by Comfy Registry https://registry.comfy.org


[tool.comfy]
PublisherId = "tester4488"
DisplayName = "node for qwen text encoder with lanczos resize"
Icon = ""


